--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16309,7 +16309,8 @@ footer {
   height: 46px;
   margin-top: .5rem;
   margin-bottom: .5rem;
-  margin-right: 3rem; }
+  /*margin-right: 3rem; */
+}
   .navbar-brand.navbar-brand-sm {
     height: 36px; }
   .navbar-brand.navbar-brand-lg {
@@ -16359,7 +16360,7 @@ footer {
     padding: .5rem 0; }
     .navbar-nav .nav-item .btn {
       display: block;
-      background-color: #B22222;
+      background-color: var(--green);
       color: #fff; } }
 
 .overlay-active .headroom {
