--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2956,7 +2956,7 @@ input[type="button"].btn-block {
   display: inline-block;
   padding-top: 0.40625rem;
   padding-bottom: 0.40625rem;
-  margin-right: 1rem;
+  /*margin-right: 1rem;*/
   font-size: 1.125rem;
   line-height: inherit;
   white-space: nowrap; }
